--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@
     </div>
     <div class=" row start space " id="contact" data-aos="fade-up" data-aos-duration="2000" style="padding: 60px 20px 70px 60px !important;">
       <h1 style="color: white;">Contact Us</h1>
-      <div class="row "style="margin: 5% 0% 5% 0%;>
+      <div class="row "style="margin: 5% 0% 5% 0%;">
         <form class="col-md-6 col-sm-12 col-lg-6 " >
            <h2 style="text-align:center;color:white;">Message</h2>
           <input type="text" class="col-5 int" width="40%" placeholder="Name">
