--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
       <p style="color: #FA2FB5; padding:0% 20% 5% 20%; font-style:inherit; text-align: center;">We at IET Lucknow's Entrepreneurship Cell believe in passion, hard effort, and an unquenchable drive for achievement. It is a place that is the confluence of a billion sparks of ideas, a place where the fire of passion mingles with the cold calculation of the brain, and a place where dreams come true. We are people who love nothing more than the thrill of coming up with ideas, working them out into businesses and experiencing the pleasure of watching it all come to fruition.</p>
       </div>
       <div class="col-xxl-6 col-xl-6 col-sm-12">
-        <img src="rocket.png" align="middle" class="rocket" style="padding-left: 200px;box-sizing: content-box;" width="50%"  alt="">
+        <img src="rocket.png" align="middle" class="rocket center" style="padding-left: 200px;box-sizing: content-box;" width="50%"  alt="">
       </div>
     </div>
     <div style="padding: 100px 5px 40px 5px; background-color:black" class="space" data-aos="fade-up" data-aos-duration="2000" id="event">
