--- a/index.html
+++ b/index.html
@@ -19,8 +19,15 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body style="background-color: #31087B;">
+    <div id="preloader" style="line-height: 0ch !important; ">
+      <div  class="center">
+      <img src="logo.png" alt="" width="200px" style="margin: auto;">
+      <br>
+      <img src="load.gif" alt="" width="80px"style="margin: auto;position: relative; bottom:55px;left:58px">
+    </div>
+    </div>
     <nav class="navbar navbar-expand-lg bg-dark navbar-dark space " id="navbar" style="background-color:black !important;">
-        <div class="container-fluid ">
+        <div class="container-fluid "> 
             <a href="index.html">
                 <img
                   class="navbar-brand d-inline-block align-top "
@@ -199,7 +206,9 @@
       <p style="color: #FA2FB5; padding:0% 20% 5% 20%; font-style:inherit; text-align: center;">We at IET Lucknow's Entrepreneurship Cell believe in passion, hard effort, and an unquenchable drive for achievement. It is a place that is the confluence of a billion sparks of ideas, a place where the fire of passion mingles with the cold calculation of the brain, and a place where dreams come true. We are people who love nothing more than the thrill of coming up with ideas, working them out into businesses and experiencing the pleasure of watching it all come to fruition.</p>
       </div>
       <div class="col-xxl-6 col-xl-6 col-sm-12">
-        <img src="rocket.png" align="middle" class="rocket" style="padding-left: 200px;box-sizing: content-box;" width="50%"  alt="">
+        <div style="display: flex;justify-content: center;">
+        <img src="rocket.png" class="rocket" style="box-sizing: content-box; margin: auto;" width="50%"  alt="">
+        </div>
       </div>
     </div>
     <div style="padding: 100px 5px 40px 5px; background-color:black" class="space" data-aos="fade-up" data-aos-duration="2000" id="event">
@@ -360,16 +369,21 @@
     </div>
     <div class=" row start space " id="contact" data-aos="fade-up" data-aos-duration="2000" style="padding: 60px 20px 70px 60px !important;">
       <h1 style="color: white;">Contact Us</h1>
-      <div class="row "style="margin: 5% 0% 5% 0%;">
+      <div class="row "style="margin: 5% 0% 5% 0%;" style="margin: 5% 0% 5% 0%;">
         <form class="col-md-6 col-sm-12 col-lg-6 " >
            <h2 style="text-align:center;color:white;">Message</h2>
-          <input type="text" class="col-5 int" width="40%" placeholder="Name">
-          <input type="email" class="col-5 int" width="40%" placeholder="Email">
-          <input type="text" class="col-10 int" width="100%" placeholder="Subject">
-          <input type="text" class="col-10 int" width="100%" style="height: 150px;text-align: left;" placeholder="Message">
+           <div class="row">
+            <div class="col-6" >
+          <input type="text" class="int"  placeholder="Name">
+            </div><div class="col-6">
+          <input type="email" class="int" placeholder="Email">
+          </div>
+          <input type="text" class="col-12 int" width="100%" placeholder="Subject">
+          <input type="text" class="col-12 int" width="100%" style="height: 150px;text-align: left;" placeholder="Message">
           <button class="btn btn-warning col-12" type="button">Button</button>
+           </div>
         </form>
-        <div class ="contact col" style="margin: 10% 0% 0% 0%;">
+        <div class ="contact col" style="margin: 5% 0% 5% 0%;">
           
           <h2 style="color: white;text-align: center;margin-bottom: 30px;">Contact Info</h2>
           <div style="margin: 20px 0px 20px 0px; align-items: center; " class="row">
@@ -417,5 +431,6 @@
         loop:true
       })
     </script>
+    <script src="script.js"></script>
   </body>
 </html>
