--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         </div>
       </nav>
       
-      <div class=" row start space " id="home" data-aos="fade-up" data-aos-duration="2000" style="padding: 60px 20px 70px 60px !important;">
+      <div class=" row start space " id="home" data-aos="fade-up" data-aos-duration="2000" style="padding: 60px 20px 70px 60px !important; z-index: 100; position: relative;">
         <div class="col cont">
         
         <h1 style="color: white; text-align: center;" class="head">
@@ -211,7 +211,7 @@
         </div>
       </div>
     </div>
-    <div style="padding: 100px 5px 40px 5px; background-color:black" class="space" data-aos="fade-up" data-aos-duration="2000" id="event">
+    <div style="padding: 100px 5px 40px 5px; background-color:black" class="space " data-aos="fade-up" data-aos-duration="2000" id="event">
       <h1 id="event" style="color:white;">EVENTS</h1>
       <div class="row" style="margin: 5%;" >
         <div class="card text-bg-dark col-xxl-4 col-xl-4 col-sm-6">
@@ -410,7 +410,7 @@
 
         </div>
       </div>
-    </div><a href="#navbar" class="stick">
+    </div><a href="#navbar" class="stick" style="z-index: 1;">
     <img src="up-arrow.png" alt="" width="50px"></a>
 
     <script
